// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge default 1`] = `
<div>
  <span
    class="p-badge p-component p-badge-dot"
    data-pc-name="badge"
    data-pc-section="root"
  />
</div>
`;

exports[`Badge severity danger 1`] = `
<div>
  <span
    class="p-badge p-component p-badge-dot p-badge-danger"
    data-pc-name="badge"
    data-pc-section="root"
  />
</div>
`;

exports[`Badge severity info 1`] = `
<div>
  <span
    class="p-badge p-component p-badge-dot p-badge-info"
    data-pc-name="badge"
    data-pc-section="root"
  />
</div>
`;

exports[`Badge severity invalid 1`] = `
<div>
  <span
    class="p-badge p-component p-badge-dot p-badge-invalid"
    data-pc-name="badge"
    data-pc-section="root"
  />
</div>
`;

exports[`Badge severity success 1`] = `
<div>
  <span
    class="p-badge p-component p-badge-dot p-badge-success"
    data-pc-name="badge"
    data-pc-section="root"
  />
</div>
`;

exports[`Badge severity warning 1`] = `
<div>
  <span
    class="p-badge p-component p-badge-dot p-badge-warning"
    data-pc-name="badge"
    data-pc-section="root"
  />
</div>
`;

exports[`Badge size invalid 1`] = `
<div>
  <span
    class="p-badge p-component p-badge-dot"
    data-pc-name="badge"
    data-pc-section="root"
  />
</div>
`;

exports[`Badge size large 1`] = `
<div>
  <span
    class="p-badge p-component p-badge-dot p-badge-lg"
    data-pc-name="badge"
    data-pc-section="root"
  />
</div>
`;

exports[`Badge size xlarge 1`] = `
<div>
  <span
    class="p-badge p-component p-badge-dot p-badge-xl"
    data-pc-name="badge"
    data-pc-section="root"
  />
</div>
`;

exports[`Badge value 1`] = `
<div>
  <span
    class="p-badge p-component"
    data-pc-name="badge"
    data-pc-section="root"
  >
    22
  </span>
</div>
`;
